--- a/models/shopify.yml
+++ b/models/shopify.yml
@@ -1187,7 +1187,7 @@ models:
       - name: count_fulfillment_label_purchased
         description: Count of distinct fulfillments for which a shipping label has been purchased (but not printed yet) on this day.
       - name: count_fulfillment_confirmed
-        description: Count of confirmed distinct fulfillents. This is the default status when no other information is available about a fulfillment.
+        description: Count of confirmed distinct fulfillments. This is the default status when no other information is available about a fulfillment.
       - name: avg_line_item_count
         description: Average line item count for orders placed on this day.
       - name: avg_discount
