--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,6 @@
 packages:
-- package: fivetran/shopify_source
-  version: [">=0.8.0", "<0.9.0"]
+# - package: fivetran/shopify_source
+#   version: [">=0.8.0", "<0.9.0"]
+  - git: https://github.com/fivetran/dbt_shopify_source.git
+    revision: feature/shopify-api-updates
+    warn-unpinned: false 
