--- a/packages.yml
+++ b/packages.yml
@@ -2,5 +2,5 @@ packages:
 # - package: fivetran/shopify_source
 #   version: [">=0.8.0", "<0.9.0"]
   - git: https://github.com/fivetran/dbt_shopify_source.git
-    revision: feature/shopify-api-updates
+    revision: main
     warn-unpinned: false 
