--- a/packages.yml
+++ b/packages.yml
@@ -1,6 +1,3 @@
 packages:
-# - package: fivetran/shopify_source
-#   version: [">=0.8.0", "<0.9.0"]
-  - git: https://github.com/fivetran/dbt_shopify_source.git
-    revision: main
-    warn-unpinned: false 
+- package: fivetran/shopify_source
+  version: [">=0.9.0", "<0.10.0"]
