adding order_shipping_lines

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -22,7 +22,7 @@ vars:
     shopify_transaction: "{{ ref('stg_shopify__transaction') }}"
     shopify_refund: "{{ ref('stg_shopify__refund') }}"
     shopify_order_adjustment: "{{ ref('stg_shopify__order_adjustment') }}"
-
+    shopify_discount_allocation: "{{ ref('stg_shopify__discount_allocation') }}"
     shopify_abandoned_checkout: "{{ ref('stg_shopify__abandoned_checkout') }}"
     shopify_collection_product: "{{ ref('stg_shopify__collection_product') }}"
     shopify_collection: "{{ ref('stg_shopify__collection') }}"
