--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,2 @@
 packages:
-- package: fivetran/shopify_source
-  version: [">=0.9.0", "<0.10.0"]
+  - git: https://github.com/graze/dbt-shopify-source.git
