--- a/packages.yml
+++ b/packages.yml
@@ -1,7 +1,3 @@
 packages:
-# - package: fivetran/shopify_source
-#   version: [">=0.10.0", "<0.11.0"]
-
-  - git: https://github.com/fivetran/dbt_shopify_source.git
-    revision: feature/update_deps
-    warn-unpinned: false
+- package: fivetran/shopify_source
+  version: [">=0.10.0", "<0.11.0"]
