update yml & regen docs

--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -9,7 +9,8 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "dbt_modules"
 
 vars:
-  shopify_using_fulfillment_event: true
+  # shopify_using_fulfillment_event: true # set to true when regenerating docs
+  # shopify_using_all_metafields: true # set to true when regenerating docs
   shopify_schema: shopify_integration_tests_6
   shopify_source:
     shopify_customer_identifier:          "shopify_customer_data"
