--- a/models/shopify.yml
+++ b/models/shopify.yml
@@ -542,7 +542,7 @@ models:
     description: Each record represents a line item of an order in Shopify.
     columns:
       - name: order_lines_unique_key
-        description: Unique key representing an order. Hashed on 'order_line_id' and 'source_relation'.
+        description: Unique key representing an order line. Hashed on 'order_line_id' and 'source_relation'.
         tests:
           - unique
           - not_null
@@ -660,7 +660,7 @@ models:
     description: Each record represents a transaction in Shopify.
     columns:
       - name: transactions_unique_id
-        description: Unique key representing an order. Hashed on 'transaction_id' and 'source_relation'.
+        description: Unique key representing a transaction. Hashed on 'transaction_id' and 'source_relation'.
         tests:
           - unique
           - not_null
@@ -925,12 +925,10 @@ models:
             severity: warn # best practice for codes to be unique
     columns:
       - name: discounts_unique_key
-        description: Unique key representing an order. Hashed on 'discount_code_id' and 'source_relation'.
+        description: Unique key representing a discount. Hashed on 'discount_code_id' and 'source_relation'.
         tests:
           - unique
           - not_null
-        config:
-            severity: error
       - name: _fivetran_synced
         description: "{{ doc('_fivetran_synced') }}"
       - name: code
