--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -1,5 +1,5 @@
 name: 'shopify_integration_tests'
-version: '0.11.0'
+version: '0.12.0'
 profile: 'integration_tests'
 config-version: 2
 
@@ -139,6 +139,7 @@ seeds:
         usage_count: float
     shopify_order_discount_code_data:
       +column_types:
+        order_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
         amount: float
     shopify_order_shipping_tax_line_data:
       +column_types:
