--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,4 @@
 packages:
-- package: fivetran/shopify_source
-  version: [">=0.11.0", "<0.12.0"]
+  - git: https://github.com/fivetran/dbt_shopify_source.git
+    revision: bugfix/remove-order-discount-code-filter
+    warn-unpinned: false
